<resources>
    <string name="app_name">WeGourmet</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_history">History</string>
    <string name="title_my_restaurants">My restaurants</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_maps">Map</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="navbar_title_favorites">Favorites</string>


    <style name="SearchViewStyle">
        <item name="android:textColor">@color/white</item>
        <item name="android:background">@drawable/element_background</item>
        //text color
        <item name="android:editTextColor">@color/white</item>
        //hint color
        <item name="android:textColorHint">@color/light_gray</item>
        //icon color
        <item name="android:tint">@color/white</item>
        //cursor color
        <item name="colorAccent">@color/white</item>
        //query search icon color
        <item name="colorControlNormal">@color/white</item>
    </style>

    <style name="RestaurantItem">
        <item name="android:textColor">@color/white</item>
        <item name="android:tint">@color/white</item>
        <item name="android:backgroundTint">@color/primary</item>
    </style>
</resources>