<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.project.wegourmet.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_my_restaurants"
        android:name="com.project.wegourmet.ui.myRestaurants.MyRestaurantFragment"
        android:label="@string/title_my_restaurants"
        tools:layout="@layout/fragment_my_restaurants" >
        <action
            android:id="@+id/action_navigation_my_restaurants_to_navigation_restaurant"
            app:destination="@id/navigation_restaurant" />
    </fragment>

    <fragment
        android:id="@+id/navigation_restaurant"
        android:name="com.project.wegourmet.ui.restaurant.RestaurantFragment"
        android:label="@string/title_restaurant"
        tools:layout="@layout/fragment_restaurant" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.project.wegourmet.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>