<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.project.wegourmet.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_restaurant"
            app:destination="@id/navigation_restaurant" />
    </fragment>
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.project.wegourmet.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.project.wegourmet.ui.favorites.FavoritesFragment"
        android:label="@string/navbar_title_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.project.wegourmet.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_restaurant"
        android:name="com.project.wegourmet.ui.restaurant.RestaurantFragment"
        android:label="@string/title_restaurant"
        tools:layout="@layout/fragment_restaurant" >
        <action
            android:id="@+id/action_navigation_restaurant_to_navigation_post"
            app:destination="@id/navigation_post" />
        <argument
            android:name="restaurantMode"
            app:argType="string" />
        <argument
            android:name="restaurantId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_post"
        android:name="com.project.wegourmet.ui.restaurant.PostFragment"
        android:label="@string/title_restaurant"
        tools:layout="@layout/fragment_post">
        <argument
            android:name="postId"
            app:argType="string" />
        <argument
            android:name="postMode"
            app:argType="string" />
        <argument
            android:name="restaurantName"
            app:argType="string" />
    </fragment>
</navigation>